@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-26T16:11:14Z",
-  "count_outdated" : 1068,
-  "uniques_outdated" : 678,
+  "timestamp" : "2023-10-27T00:40:45Z",
+  "count_outdated" : 1071,
+  "uniques_outdated" : 680,
   "count" : 1105,
   "uniques" : 702,
   "clones" : [
-    {
-      "timestamp": "2023-10-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-10-13T00:00:00Z",
       "count": 3,
