@@ -1,12 +1,7 @@
 {
-  "count": 35,
+  "count": 34,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2023-10-12T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-10-13T00:00:00Z",
       "count": 3,
