@@ -1,3 +1,12 @@
+2023-10-27T00:40:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6661388075 # 1287
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-27
+* notice: last 14d: unq all: 4 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 678 1068 / 702 1105
+* notice: next accum: outdated-unq outdated-all / unq all: 680 1071 / 702 1105
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-10-12] / []
+
 2023-10-26T16:11:14Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6656838246 # 1286
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-26
